--- a/Task4/index.html
+++ b/Task4/index.html
@@ -4,12 +4,12 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Task2</title>
+        <title>Task4</title>
     </head>
 
     <body>
 
-        <button >Click me</button>
+        <button id="sumOfArray">Click me</button>
         
         <script src="task4.js"></script>
 
