--- a/Task10_11/index.html
+++ b/Task10_11/index.html
@@ -12,7 +12,7 @@
         <button id="ip">Get ip</button>
 
 
-        <script src="task10.js"></script>
+        <script src="task10_11.js"></script>
 
 
     </body>
